--- a/FinanceManager/View/CreateTransactionPage.xaml
+++ b/FinanceManager/View/CreateTransactionPage.xaml
@@ -47,21 +47,29 @@
         </StackPanel>
 
         <!--TODO: Content should be placed within the following grid-->
-        <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
-            <StackPanel>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBox Grid.Column="0" Text="{Binding Transaction.Value, Mode=TwoWay, Converter={StaticResource DecimalConverter}}" InputScope="Number" PlaceholderText="type transaction value" Header="transaction value"/>
-                    <AppBarButton Grid.Column="1" Icon="Calculator" Command="{Binding CalculatorCommand, Mode=TwoWay}" IsCompact="True" VerticalAlignment="Bottom" Margin="10,0,0,7"/>
-                </Grid>
-                <ComboBox ItemsSource="{Binding Currencies}" SelectedItem="{Binding SelectedCurrency, Mode=TwoWay}" DisplayMemberPath="Title" Header="transaction currancy" PlaceholderText="choose transaction currancy"/>
-                <ComboBox ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory, Mode=TwoWay}" DisplayMemberPath="Title" Header="transaction category" PlaceholderText="choose transaction category"/>
-                <ComboBox ItemsSource="{Binding Users}" DisplayMemberPath="Title" SelectedItem="{Binding SelectedUser, Mode=TwoWay}"  Header="transaction user" PlaceholderText="choose transaction user"/>
-                <TextBox Text="{Binding Transaction.Note, Mode=TwoWay}" TextWrapping="Wrap" AcceptsReturn="True" MaxHeight="100" Height="100" PlaceholderText="type your notes" Header="transaction notes"/>
-            </StackPanel>
+        <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,0,19,0">
+            <ScrollViewer>
+                <StackPanel>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Orientation="Vertical">
+                            <TextBox Grid.Column="0" Text="{Binding Transaction.Value, Mode=TwoWay, Converter={StaticResource DecimalConverter}}" InputScope="Number" PlaceholderText="type transaction value" Header="transaction value"/>
+                            <TextBlock Text="{Binding ValidationErrors[Value]}" Foreground="Red" FontSize="16"/>
+                        </StackPanel>
+                        <AppBarButton Grid.Column="1" Icon="Calculator" Command="{Binding CalculatorCommand, Mode=TwoWay}" IsCompact="True" VerticalAlignment="Bottom" Margin="5.667,0,0,25"/>
+                    </Grid>
+                    <ComboBox ItemsSource="{Binding Currencies}" SelectedItem="{Binding SelectedCurrency, Mode=TwoWay}" DisplayMemberPath="Title" Header="transaction currancy" PlaceholderText="choose transaction currancy" Margin="0,10,0,0"/>
+                    <TextBlock Text="{Binding ValidationErrors[Currency]}" Foreground="Red" FontSize="16"/>
+                    <ComboBox ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory, Mode=TwoWay}" DisplayMemberPath="Title" Header="transaction category" PlaceholderText="choose transaction category" Margin="0,10,0,0"/>
+                    <TextBlock Text="{Binding ValidationErrors[Category]}" Foreground="Red" FontSize="16"/>
+                    <ComboBox ItemsSource="{Binding Users}" DisplayMemberPath="Title" SelectedItem="{Binding SelectedUser, Mode=TwoWay}"  Header="transaction user" PlaceholderText="choose transaction user" Margin="0,10,0,0"/>
+                    <TextBlock Text="{Binding ValidationErrors[User]}" Foreground="Red" FontSize="16"/>
+                    <TextBox Text="{Binding Transaction.Note, Mode=TwoWay}" TextWrapping="Wrap" AcceptsReturn="True" MaxHeight="100" Height="100" PlaceholderText="type your notes" Header="transaction notes" Margin="0,10,0,0"/>
+                </StackPanel>
+            </ScrollViewer>
         </Grid>
     </Grid>
 </Page>
