--- a/FinanceManager/View/CreateUserPage.xaml
+++ b/FinanceManager/View/CreateUserPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="FinanceManager.View.CreateCurrencyPage"
+    x:Class="FinanceManager.View.CreateUserPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FinanceManager.View"
@@ -11,14 +11,14 @@
     <Page.BottomAppBar>
         <CommandBar>
             <CommandBar.PrimaryCommands>
-                <AppBarButton Icon="Save" Label="save" Command="{Binding SaveCurrencyCommand}"/>
-                <AppBarButton Icon="Cancel" Label="cancel" Command="{Binding CancelCurrencyCommand}"/>
+                <AppBarButton Icon="Save" Label="save" Command="{Binding SaveUserCommand}"/>
+                <AppBarButton Icon="Cancel" Label="cancel" Command="{Binding CancelUserCommand}"/>
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
             </CommandBar.SecondaryCommands>
         </CommandBar>
     </Page.BottomAppBar>
-    
+
     <Grid x:Name="LayoutRoot">
 
         <Grid.ChildrenTransitions>
@@ -35,16 +35,16 @@
         <!-- Title Panel -->
         <StackPanel Grid.Row="0" Margin="19,0,0,0">
             <TextBlock Text="finance manager" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
-            <TextBlock Text="new currency" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}" FontSize="48"/>
+            <TextBlock Text="new user" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}" FontSize="48"/>
         </StackPanel>
 
         <!--TODO: Content should be placed within the following grid-->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
             <StackPanel>
-                <TextBox Text="{Binding Currency.Title, Mode=TwoWay}" PlaceholderText="type currency title" Header="currency title"/>
+                <TextBox Text="{Binding User.Title, Mode=TwoWay}" PlaceholderText="type user title" Header="user title"/>
                 <TextBlock Text="{Binding ValidationErrors[Title]}" Foreground="Red" FontSize="16"/>
-                <TextBox Text="{Binding Currency.Symbol, Mode=TwoWay}" PlaceholderText="type currency symbol" Header="currency symbol" InputScope="CurrencyAmountAndSymbol" Margin="0,10,0,0"/>
-                <TextBlock Text="{Binding ValidationErrors[Symbol]}" Foreground="Red" FontSize="16"/>
+                <TextBox Text="{Binding User.FirstName, Mode=TwoWay}" PlaceholderText="type user first name" Header="user first name"/>
+                <TextBox Text="{Binding User.LastName, Mode=TwoWay}" PlaceholderText="type user last name" Header="user last name"/>
             </StackPanel>
         </Grid>
     </Grid>
