--- a/FinanceManager/View/LoginPage.xaml
+++ b/FinanceManager/View/LoginPage.xaml
@@ -1,18 +1,22 @@
 ﻿<Page
-    x:Class="FinanceManager.View.CreateCurrencyPage"
+    x:Class="FinanceManager.View.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FinanceManager.View"
+    xmlns:conv="using:FinanceManager.View.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Resources>
+        <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+    </Page.Resources>
+    
     <Page.BottomAppBar>
         <CommandBar>
             <CommandBar.PrimaryCommands>
-                <AppBarButton Icon="Save" Label="save" Command="{Binding SaveCurrencyCommand}"/>
-                <AppBarButton Icon="Cancel" Label="cancel" Command="{Binding CancelCurrencyCommand}"/>
+                <AppBarButton Icon="Forward" Label="log in" Command="{Binding LoginCommand}"/>
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
             </CommandBar.SecondaryCommands>
@@ -35,16 +39,18 @@
         <!-- Title Panel -->
         <StackPanel Grid.Row="0" Margin="19,0,0,0">
             <TextBlock Text="finance manager" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
-            <TextBlock Text="new currency" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}" FontSize="48"/>
+            <TextBlock Text="log in" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}" FontSize="48"/>
         </StackPanel>
 
         <!--TODO: Content should be placed within the following grid-->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
-            <StackPanel>
-                <TextBox Text="{Binding Currency.Title, Mode=TwoWay}" PlaceholderText="type currency title" Header="currency title"/>
-                <TextBlock Text="{Binding ValidationErrors[Title]}" Foreground="Red" FontSize="16"/>
-                <TextBox Text="{Binding Currency.Symbol, Mode=TwoWay}" PlaceholderText="type currency symbol" Header="currency symbol" InputScope="CurrencyAmountAndSymbol" Margin="0,10,0,0"/>
-                <TextBlock Text="{Binding ValidationErrors[Symbol]}" Foreground="Red" FontSize="16"/>
+            <StackPanel Orientation="Vertical">
+                <TextBox Text="{Binding Title, Mode=TwoWay}" PlaceholderText="type your title" Header="title"/>
+                <TextBlock Text="{Binding ValidationErrors[Title]}" Foreground="Red" FontSize="16" Margin="0,-10,0,0"/>
+                <PasswordBox Password="{Binding Password, Mode=TwoWay}" PlaceholderText="enter your password" Header="password" />
+                <TextBlock Text="{Binding ValidationErrors[Password]}" Foreground="Red" FontSize="16" Margin="0,-10,0,0"/>
+                <PasswordBox Password="{Binding RepeatPassword, Mode=TwoWay}" Visibility="{Binding RepeatPasswordIsVisible, Converter={StaticResource BoolToVisibilityConverter}}" PlaceholderText="repeat your password" Header="password" />
+                <TextBlock Text="{Binding ValidationErrors[RepeatPassword]}" Foreground="Red" FontSize="16" Margin="0,-10,0,0"/>
             </StackPanel>
         </Grid>
     </Grid>
