--- a/FinanceManager/View/MoneyBoxPage.xaml
+++ b/FinanceManager/View/MoneyBoxPage.xaml
@@ -4,6 +4,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FinanceManager.View"
     xmlns:conv="using:FinanceManager.View.Converters"
+    xmlns:i="using:Microsoft.Xaml.Interactivity"
+    xmlns:act="using:FinanceManager.View.Actions"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:datavischart="using:WinRTXamlToolkit.Controls.DataVisualization.Charting"
@@ -29,26 +32,31 @@
     </Page.BottomAppBar>
 
     <Grid x:Name="LayoutRoot">
-        <Pivot Title="finance manager" SelectedIndex="{Binding SelectedPivotItem, Mode=TwoWay}">
-            <PivotItem Header="money box">
-
+        <Pivot SelectedIndex="{Binding SelectedPivotItem, Mode=TwoWay}">
+            <Pivot.Title>
+                <Grid Width="{Binding ElementName=moneyBoxPivotItem, Path=ActualWidth}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="finance manager"/>
+                    <TextBlock Grid.Column="1" Text="{Binding CurrentUser.Title}"/>
+                </Grid>
+            </Pivot.Title>
+            <PivotItem Header="money box" x:Name="moneyBoxPivotItem">
                 <StackPanel Orientation="Vertical">
-
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="title" FontSize="18" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
                         <TextBlock Text="{Binding MoneyBox.Title}" FontSize="32"/>
                     </StackPanel>
-
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="created" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
                         <TextBlock Text="{Binding MoneyBox.CreationDate}" FontSize="32"/>
                     </StackPanel>
-
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="last modified" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
                         <TextBlock Text="{Binding MoneyBox.LastModifiedDate}" FontSize="32"/>
                     </StackPanel>
-
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="balance" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
                         <StackPanel Orientation="Horizontal">
@@ -57,7 +65,6 @@
                             <TextBlock Text="{Binding MoneyBox.PrimaryCurrency.Symbol}" FontSize="32"/>
                         </StackPanel>
                     </StackPanel>
-
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="total income" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
                         <StackPanel Orientation="Horizontal">
@@ -66,7 +73,6 @@
                             <TextBlock Text="{Binding MoneyBox.PrimaryCurrency.Symbol}" FontSize="32"/>
                         </StackPanel>
                     </StackPanel>
-
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="total expence" FontSize="18" Margin="0,5,0,0" Foreground="{ThemeResource ListBoxItemDisabledForegroundThemeBrush}"/>
                         <StackPanel Orientation="Horizontal">
