Implemented reporting periods logic (added page for settings, realized money boxes page, started money box page)

--- a/YanpixFinanceManager/View/MoneyBoxesPage.xaml
+++ b/YanpixFinanceManager/View/MoneyBoxesPage.xaml
@@ -43,7 +43,8 @@
                 x:Name="listMoneyBoxes" 
                 HorizontalAlignment="Stretch" 
                 Background="{x:Null}"
-                ItemsSource="{Binding MoneyBoxes}">
+                ItemsSource="{Binding MoneyBoxes}"
+                SelectedItem="{Binding SelectedMoneyBox, Mode=TwoWay}">
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <Setter Property="Padding" Value="0"/>
