--- a/YanpixFinanceManager/View/MoneyBoxPage.xaml
+++ b/YanpixFinanceManager/View/MoneyBoxPage.xaml
@@ -13,6 +13,9 @@
     <Page.Resources>
 
         <conv:BoolToRedGreenConverter x:Name="BoolToPositiveConverter"/>
+        <conv:BoolToVisibilityConverter x:Name="BoolToVisibilityConverter"/>
+        <conv:DateTimeToStringConverter x:Name="DateTimeToStringConverter" IsMonthPeriod="{Binding MonthVisible}"/>
+        <conv:DateTimeToDateTimeOffsetConverter x:Name="DateTimeToDateTimeOffsetConverter"/>
 
         <Style x:Key="CustomPivotStyle" TargetType="Pivot">
             <Setter Property="Margin" Value="0"/>
@@ -78,11 +81,10 @@
         <CommandBar>
             <CommandBar.PrimaryCommands>
                 <AppBarButton Icon="Add" Label="Income" Command="{Binding IncomeCommand, Mode=TwoWay}"/>
-                <AppBarButton Icon="Switch" Label="Transfer" Command="{Binding TransferCommand, Mode=TwoWay}"/>
                 <AppBarButton Icon="Remove" Label="Expence" Command="{Binding ExpenceCommand, Mode=TwoWay}"/>
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
-                <AppBarToggleButton Label="Show data per year" Command="{Binding ShowYearCommand, Mode=TwoWay}"/>
+                <AppBarToggleButton Label="{Binding ShowYearCommandContent}" Command="{Binding ShowYearCommand, Mode=TwoWay}"/>
                 <AppBarButton Label="Edit money box" Command="{Binding EditCommand, Mode=TwoWay}"/>
                 <AppBarButton Label="Delete money box" Command="{Binding DeleteCommand, Mode=TwoWay}"/>
             </CommandBar.SecondaryCommands>
@@ -132,10 +134,10 @@
                             <TextBlock Text="{Binding MoneyBox.Title}" VerticalAlignment="Center" FontSize="30" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right">
-                            <TextBlock Text="{Binding Period}" FontSize="20" VerticalAlignment="Center" Margin="0"/>
+                            <TextBlock Text="{Binding Period, Converter={StaticResource DateTimeToStringConverter}}" FontSize="20" VerticalAlignment="Center" Margin="0"/>
                             <AppBarButton Icon="Calendar" IsCompact="True" VerticalAlignment="Center" Margin="5,-8,0,0">
                                 <AppBarButton.Flyout>
-                                    <DatePickerFlyout x:Name="DatePicker" DayVisible="{Binding}" Date="{Binding SelectedPeriod, Mode=TwoWay}"/>
+                                    <DatePickerFlyout x:Name="DatePicker" DayVisible="False" MonthVisible="{Binding MonthVisible}" Date="{Binding Period, Mode=TwoWay, Converter={StaticResource DateTimeToDateTimeOffsetConverter}}"/>
                                 </AppBarButton.Flyout>
                             </AppBarButton>
                         </StackPanel>
@@ -178,10 +180,12 @@
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
                                     <TextBlock Margin="0,0,10,0" Text="Income:" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                     <TextBlock Text="{Binding MoneyBox.Income}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="&#160;" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="{Binding MoneyBox.CurrencySymbol}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                 </StackPanel>
                                 <Line 
                                     Grid.Row="1" 
-                                    X1="{Binding ElementName=incomeRectSize, Path=ActualWidthValue}" 
+                                    X1="{Binding ElementName=IncomeBarSize, Path=ActualWidthValue}" 
                                     Y1="0" 
                                     X2="{Binding ElementName=SizeProxy, Path=ActualWidthValue}" 
                                     Y2="0" 
@@ -190,14 +194,14 @@
                                     VerticalAlignment="Center" 
                                     HorizontalAlignment="Left"
                                     StrokeDashArray="5,5"/>
-                                <Rectangle x:Name="incomeRect"
+                                <Rectangle x:Name="IncomeBar"
                                     Grid.Row="1" 
                                     Height="15" 
-                                    Fill="{ThemeResource PhoneMidBrush}" 
-                                    Width="{Binding ElementName=SizeProxy, Path=ActualWidthValue, Converter={StaticResource IncomeWidthScaleConverter}}" 
+                                    Fill="{ThemeResource PhoneMidBrush}"
+                                    Width="{Binding ElementName=SizeProxy, Path=ActualWidthValue, Converter={StaticResource IncomeWidthScaleConverter}}"
                                     HorizontalAlignment="Left">
                                     <Rectangle.Resources>
-                                        <conv:ActualSizePropertyProxy Element="{Binding ElementName=incomeRect}" x:Name="incomeRectSize"/>
+                                        <conv:ActualSizePropertyProxy Element="{Binding ElementName=IncomeBar}" x:Name="IncomeBarSize"/>
                                     </Rectangle.Resources>
                                 </Rectangle>
                             </Grid>
@@ -209,6 +213,8 @@
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
                                     <TextBlock Margin="0,0,10,0" Text="Expence:" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                     <TextBlock Text="{Binding MoneyBox.Expence}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="&#160;" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="{Binding MoneyBox.CurrencySymbol}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                 </StackPanel>
                                 <Line 
                                     Grid.Row="1" 
@@ -240,6 +246,8 @@
                                 <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" >
                                     <TextBlock Margin="0,0,10,0" Text="Balance:" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                     <TextBlock Text="{Binding MoneyBox.Balance}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="&#160;" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="{Binding MoneyBox.CurrencySymbol}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                 </StackPanel>
                                 <Line 
                                     Grid.Row="1" 
@@ -268,6 +276,8 @@
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
                                     <TextBlock Margin="0,0,10,0" Text="Budget:" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                     <TextBlock Text="{Binding MoneyBox.Budget}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="&#160;" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="{Binding MoneyBox.CurrencySymbol}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                 </StackPanel>
                                 <Line 
                                     Grid.Row="1" 
@@ -299,6 +309,8 @@
                                 <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,0,0">
                                     <TextBlock Margin="0,0,10,0" Text="Available:" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                     <TextBlock Text="{Binding MoneyBox.Available}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="&#160;" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
+                                    <TextBlock Text="{Binding MoneyBox.CurrencySymbol}" FontSize="19" Foreground="{ThemeResource ListBoxItemSelectedForegroundThemeBrush}"/>
                                 </StackPanel>
                                 <Line 
                                     Grid.Row="1" 
