Added icons; implemented edit money box functionality; added confirmation to delete actions

--- a/YanpixFinanceManager/View/AddNewCategoryPage.xaml
+++ b/YanpixFinanceManager/View/AddNewCategoryPage.xaml
@@ -12,6 +12,7 @@
         <CommandBar>
             <CommandBar.PrimaryCommands>
                 <AppBarButton Icon="Save" Label="Save" Command="{Binding SaveCommand, Mode=TwoWay}"/>
+                <AppBarButton Icon="Cancel" Label="Cancel" Command="{Binding CancelCommand, Mode=TwoWay}"/>
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
             </CommandBar.SecondaryCommands>
